Fixed styling and some spacing for app background

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,38 +1,6 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+// https://coolors.co/058ed9-fdfffc-f5141f-000000-adadad
+$red-gradient: linear-gradient(to bottom, #eb0000 17%, #000000 91%);
+$black-gradient: linear-gradient(to bottom, #000000 0%, #434343 74%);
+$red: #F5141F;
+$grey: #353535;
+$blue: #058ED9;
