--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -79,6 +79,8 @@ $blue: #058ED9;
             justify-content: space-between;
             border: 1px solid black;
             border-radius: 5px;
+            margin-top: 0%;
+            margin-bottom: 0%;
         }
     }
 }
